---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date:
  Changes:
    - Added 'enable zoom out' control. This re-enables zooming when you are playing with 'Disable map zoom out after map move' and want to zoom out regardless of whether the map jumps to another location.
    - Updated readme with a detailed description of what is 'last known map position'.
    - Last known map position is now updated when using Artillery targeting remote and when creating, modifying or delete map tags.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 07/04/2019
  Bugfixes:
    - Fixed a bug that was disabling zooming in completely if the player had the same key assigned to both 'Zoom in' and 'Alternative zoom in' base game controls.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 07/04/2019
  Minor improvements:
    - Improved the descriptions of the controls and settings - added more information, fixed grammar etc.
    - Added mod settings validation.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 06/04/2019
  Changes:
    - Binoculars zoom level is now configurable.
    - Added a Binoculars double-action setting. When enabled, first use will zoom in only enough to show map labels and second use will zoom in to the configured zoom level.
  Bugfixes:
    - If 'map zoom out after map move' is disabled, it is no longer possible to zoom out from the 'zoom to world' view to the map view.
    - 'Quick zoom out' does no longer reset last known map position.
  Minor improvements:
    - Changed thumbnail background colour.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 06/04/2019
  Changes: