@@ -4,6 +4,7 @@ ZoomingReinvented_max-world-zoom-out=Max world zoom out level
 ZoomingReinvented_default-map-zoom-level=Default map zoom level
 ZoomingReinvented_quick-zoom-out-zoom-level='Quick zoom out' map zoom level
 ZoomingReinvented_binoculars-zoom-level=Binoculars zoom level
+ZoomingReinvented_auto-equip-binoculars=Auto equip Binoculars
 ZoomingReinvented_binoculars-double-action-enabled=Enable Binoculars double-action
 ZoomingReinvented_disable-map-zoom-out=Disable map zoom out after map move
 
@@ -13,6 +14,7 @@ ZoomingReinvented_max-world-zoom-out=Defines how far you can zoom out and still 
 ZoomingReinvented_default-map-zoom-level=Defines at what zoom level the map opens. Base game's value is about 0.0313. Note that map labels disappear at zoom level below 0.0157.
 ZoomingReinvented_quick-zoom-out-zoom-level=Defines at what zoom level the map opens when using 'Quick zoom out'. Note that map labels disappear at zoom level below 0.0157.
 ZoomingReinvented_binoculars-zoom-level=Defines at what zoom level the map opens when using the Binoculars item.
+ZoomingReinvented_auto-equip-binoculars=When 'Quick zoom out' is used, Binoculars will be automatically put in your hand. If you don't have Binoculars in your inventory, they will be given to you for free!
 ZoomingReinvented_binoculars-double-action-enabled=If enabled, when using Binoculars in the map view and the labels on the map are not visible, Binoculars will first zoom in only enough to show the map labels. Using them again will zoom in to the configured 'Binoculars zoom level'.
 ZoomingReinvented_disable-map-zoom-out=Defines whether to disable map zooming out after the map position has changed (by dragging, using move controls or zooming in). This is to prevent sudden map position changes when zooming out (see known issues for explanation why this happens). If this option is selected, after you move the map, the only way to zoom out is to reopen the map, use 'Quick zoom out', use 'Enable zoom out' or zoom in to the 'zoom to world' view and hover over some object - this will update last known map position and allow to zoom out again.
 
